--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "commander": "^2.19.0",
-    "inquirer": "^6.2.2"
+    "inquirer": "^6.2.2",
+    "lodash": "^4.17.11"
   }
 }
