WIP Questions Module

--- a/resources/.env.stub
+++ b/resources/.env.stub
@@ -1,16 +1,17 @@
+APP_NAME={{server_name}}
 APP_ENV=prod
 APP_KEY=
 APP_DEBUG=false
-APP_URL=http://{{FQDN}}
+APP_URL={{protocol}}://{{fqdn}}
 
 LOG_CHANNEL=daily
 
-DB_CONNECTION={{DBDRIVER}}
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE={{DB}}
-DB_USERNAME={{DBUSER}}
-DB_PASSWORD={{DBPASS}}
+DB_DATABASE={{db_name}}
+DB_USERNAME={{db_user}}
+DB_PASSWORD={{db_pass}}
 
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
@@ -23,18 +24,18 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER={{MAILDRIVER}}
-MAIL_HOST={{MAILHOST}}
-MAIL_PORT={{MAILPORT}}
-MAIL_USERNAME={{MAILUSERNAME}}
-MAIL_PASSWORD={{MAILPASSWORD}}
+MAIL_DRIVER={{mail_driver}}
+MAIL_HOST={{mail_host}}
+MAIL_PORT=587
+MAIL_USERNAME={{mail_username}}
+MAIL_PASSWORD={{mail_password}}
 MAIL_ENCRYPTION=TLS
-MAIL_FROM_NAME={{MAILFROMNAME}}
-MAIL_FROM_ADDRESS={{MAILUSERNAME}}
+MAIL_FROM_NAME={{server_name}}
+MAIL_FROM_ADDRESS={{mail_from}}
 
-DEFAULT_OWNER_NAME={{OWNER}}
-DEFAULT_OWNER_EMAIL={{OWNEREMAIL}}
-DEFAULT_OWNER_PASSWORD={{OWNERPASSWORD}}
+DEFAULT_OWNER_NAME={{owner_username}}
+DEFAULT_OWNER_EMAIL={{owner_email}}
+DEFAULT_OWNER_PASSWORD={{owner_password}}
 
-TMDB_API_KEY={{TMDBAPIKEY}}
-OMDB_API_KEY={{OMDBAPIKEY}}
+TMDB_API_KEY={{tmdb_key}}
+OMDB_API_KEY={{ombd_key}}
